Blender 2.93 - Follow Path: Camera overshoots path end and drops indefinetely in Z direction #87854

Closed
opened 2021-04-27 09:37:09 +02:00 by Tobias · 14 comments

System Information
Operating system: Windows 10
Graphics card: NVIDIA GeForce RTX 3070

Blender Version
Broken: 2.93.0 beta, db3b610040, master, 2021-04-25
Worked: 2.92.0, 02948a2cab, master, 2021-02-24

Short description of error
A camera setup with the follow path constraint stops the camera at the end of the path in 2.92.
In 2.93, the camera does not stop moving at the end of the path but keeps traveling in Z direction.20210427_followPath.blend

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
Create camera, bezier curve and empty.
camera: parent to bezier curve with follow path
camera: track to constrint, target empty

**System Information** Operating system: Windows 10 Graphics card: NVIDIA GeForce RTX 3070 **Blender Version** Broken: 2.93.0 beta, db3b61004042, master, 2021-04-25 Worked: 2.92.0, 02948a2cab44, master, 2021-02-24 **Short description of error** A camera setup with the follow path constraint stops the camera at the end of the path in 2.92. In 2.93, the camera does not stop moving at the end of the path but keeps traveling in Z direction.[20210427_followPath.blend](https://archive.blender.org/developer/F10041128/20210427_followPath.blend) **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). Create camera, bezier curve and empty. camera: parent to bezier curve with follow path camera: track to constrint, target empty
Author

Added subscriber: @Iam_Hidari

Added subscriber: @Iam_Hidari
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this. Seems like this could be a potential regression.

I can reproduce this. Seems like this could be a potential regression.
Member

Added subscribers: @ZedDB, @wbmoss_dev

Added subscribers: @ZedDB, @wbmoss_dev
Member

Due to cf2baa585c probably as an oversight.
Pinging to let @ZedDB know about it.

Due to cf2baa585c probably as an oversight. Pinging to let @ZedDB know about it.

This is intentional. Before it was capped because it couldn't properly extrapolate.
However other constraints (like splike IK) had workarounds to allow extrapolation.

In that patch I rewrote the underlying system so hacks like that wasn't needed anymore.
So now all "follow curve" can extrapolate and properly loop around a cyclic path.

This is intentional. Before it was capped because it couldn't properly extrapolate. However other constraints (like splike IK) had workarounds to allow extrapolation. In that patch I rewrote the underlying system so hacks like that wasn't needed anymore. So now all "follow curve" can extrapolate and properly loop around a cyclic path.
Member

Changed status from 'Confirmed' to: 'Needs Triage'

Changed status from 'Confirmed' to: 'Needs Triage'
Member

@ZedDB Is this documented? E.g. in the release notes?

@ZedDB Is this documented? E.g. in the release notes?
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

@filedescriptor No release notes as the change was a bug fix.

In addition to this we generally do not use versioning code to change animated data.
So I don't think there is much to do here. Things are working as intended.

Edit: Will discuss this with the animation module.

@filedescriptor No release notes as the change was a bug fix. In addition to this we generally do not use versioning code to change animated data. So I don't think there is much to do here. Things are working as intended. Edit: Will discuss this with the animation module.
Sebastian Parborg self-assigned this 2021-05-14 12:39:49 +02:00

After some further discussion in the animation module, it was decided to add a "clamp" checkbox to the affected functions

After some further discussion in the animation module, it was decided to add a "clamp" checkbox to the affected functions

This issue was referenced by 6a0906c09a

This issue was referenced by 6a0906c09a263f5fb17449407f5988c4bda53436

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 2.93 LTS milestone 2023-02-07 18:46:14 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87854
No description provided.